--- a/magazine.html
+++ b/magazine.html
@@ -69,7 +69,7 @@
 		<div id="side">
 			<div id="sidea">
 				<!-- Side A content start -->
-				<h6><a href="http://www.abutoo.co.uk/stikandtwig/newgame.html">New Game</a></h6>
+				<h6><a href="./newgame.html">New Game</a></h6>
 				<p>Hi Twig here, We want you to know about a new game called <strong>Prophecy</strong>.</p>
 				<br/>
 				<h5>Weapons</h5>
@@ -82,7 +82,7 @@
 				<h6>Cheat Codes 2</h6>
 				<p>This is one of Stiks favorites.</p>
 				<br/>
-				<a href="http://www.abutoo.co.uk/stikandtwig/newchallenges.html"><h5>New Challenges</h5></a>
+				<a href="./newchallenges.html"><h5>New Challenges</h5></a>
 				<p>Rewards, trophies and achievements</p>
 				<br/>
 					
@@ -93,7 +93,7 @@
 				<h6>Moderators</h6>
 				<p>Become a moderator like me - Yeah right, like i'm going to tell you that!</p>
 				<br/>
-				<a href="http://www.abutoo.co.uk/stikandtwig/intro.html"><h5>Intro</h5></a>
+				<a href="./intro.html"><h5>Intro</h5></a>
 				<p>Start here</p>
 				<br/>
 		
