--- a/newchallenges.html
+++ b/newchallenges.html
@@ -46,7 +46,7 @@
 <body ontouchmove="BlockMove(event);">
 
 
-<p>&laquo; <a href="http://www.abutoo.co.uk/stikandtwig/magazine.html">Main</a> </p>
+<p>&laquo; <a href="./magazine.html">Main</a> </p>
   
 <h1>New Challenges!!!</h1>
 
