--- a/newgame.html
+++ b/newgame.html
@@ -46,7 +46,7 @@
 <body ontouchmove="BlockMove(event);">
 
 
-<p>&laquo; <a href="http://www.abutoo.co.uk/stikandtwig/magazine.html">Main</a> </p>
+<p>&laquo; <a href="./magazine.html">Main</a> </p>
   
 <h1>New Game!</h1>
 <p>Hi Twig here, <br/><br/>We want you to know about a new twig game called...<br/><br/><FONT SIZE=7 COLOR="blue" FACE="Arial"><em><big>PROPHECY!</big></em></FONT><br/>I got a prophecy telling me all about it but dont tell anyone. This is the 2<sup>nd</sup> in the Stik and Twig series followed by the third game bloodlines. These games are coming out<br/><br/><FONT SIZE=7 COLOR="red"><big>SOON</big></FONT><br/>probably...</p> 
