switch page abs hyperlinks to relative

--- a/intro.html
+++ b/intro.html
@@ -46,7 +46,7 @@
 <body ontouchmove="BlockMove(event);">
 
 
-<p>&laquo; <a href="http://www.abutoo.co.uk/stikandtwig/magazine.html">Main</a> </p>
+<p>&laquo; <a href="./magazine.html">Main</a> </p>
   
 <h1>Intro:</h1>
 <p>Hi Twig here, <br/> I was playing online the other day and I found that when you get a kill and you get a donkey you can upgrade new animals to ride like some of these</p>
